Add content to waffle recipe

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Classic Waffles</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Classic Waffle</title>
+  </head>
+  <body>
+    <h1> Classic Waffles </h1>
+    <img src="../images/waffles.jpg" alt="waffles image" />
+
+    <h3> <em> A lovely, crispy waffle perfect for the morning. </em></h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis similique corporis, consequuntur excepturi dolor at, laborum atque provident libero a odio</p>
+
+    <h4>Ingredients</h4>
+    <ul>
+      <li>2 cups all-purpose flour</li>
+      <li>1 teaspoon salt</li>
+      <li>4 teaspoons baking powder</li>
+      <li>2 tablespoons white sugar</li>
+      <li>2 eggs</li>
+      <li>1½ cups warm milk</li>
+      <li>1⅓ cup butter, melted</li>
+      <li>1 teaspoon vanilla extract</li>
+    </ul>
+
+    <h4>Directions</h4>
+    <ol>
+      <li>In a large bowl, mix together flour, salt, baking powder and sugar; set aside. Preheat waffle iron to desired temperature.</li>
+      <li>In a separate bowl, beat the eggs. Stir in the milk, butter and vanilla. Pour the milk mixture into the flour mixture; beat until blended.</li>
+      <li>In a separate bowl, beat the eggs. Stir in the milk, butter and vanilla. Pour the milk mixture into the flour mixture; beat until blended.</li>
+    </ol>
+  </body>
 </html>
