--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/waffles.html">Classic Waffles</a>
+<ul>
+    <li><a href="./recipes/waffles.html">Classic Waffles</a></li>
+    <li><a href="./recipes/bacon.html"> Bacon </a></li>
+    <li><a href="./recipes/muffins.html"> Muffins </a></li>
+</ul>
 </body>
 </html>
